tests/ui/missing-err.stderr
error: Missing err attribute

         = help: Add #[err(Type)] attribute

 --> tests/ui/missing-err.rs:5:8
  |
5 | struct MyStruct {
  |        ^^^^^^^^
