tests/ui/missing-err.rs
#![no_main]

#[derive(derive_try_from::TryFromRef)]
#[source(SourceStruct)]
struct MyStruct {
    field: u32
}